--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
    
+	
   </head>
   <body>
+	comand : 
+	- git add .
+	- git commit -m 'abra kadabra2'
+	- git push
 	<h1>Hallo world</h1>
   </body>
 </html>
